# redis_practice

./: Cargo.toml
src/: index.html  main.rs  number.html
